force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Open_Fee_Receivable__c.field-meta.xml
<CustomField>
    <fullName>Open_Fee_Receivable__c</fullName>
    <label>Open Fee Receivable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>