force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Open_NSF_Charges__c.field-meta.xml
<CustomField>
    <fullName>Open_NSF_Charges__c</fullName>
    <label>Open NSF Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>