force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Open_Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Open_Sales_Tax__c</fullName>
    <label>Open Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>