force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Original_IDC_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_IDC_Amount__c</fullName>
    <label>Original IDC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>