force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Original_Residual_Amount__c.field-meta.xml
<CustomField>
    <fullName>Original_Residual_Amount__c</fullName>
    <label>Original Residual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>