force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Original_Unearned_Lease_Income__c.field-meta.xml
<CustomField>
    <fullName>Original_Unearned_Lease_Income__c</fullName>
    <label>Original Unearned Lease Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>