force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Other_Equipment_Owned__c.field-meta.xml
<CustomField>
    <fullName>Other_Equipment_Owned__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Other Equipment Owned</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>