force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Paid_Estimated_Property_Tax_Tax__c.field-meta.xml
<CustomField>
    <fullName>Paid_Estimated_Property_Tax_Tax__c</fullName>
    <label>Paid Estimated Property Tax + Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>