force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Paid_Service_Fees_Tax__c.field-meta.xml
<CustomField>
    <fullName>Paid_Service_Fees_Tax__c</fullName>
    <label>Paid Service Fees + Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>