force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Passthrough_Disbursement__c.field-meta.xml
<CustomField>
    <fullName>Passthrough_Disbursement__c</fullName>
    <label>Passthrough Disbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>