force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Payment_Frequency_Rental_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency_Rental_Term__c</fullName>
    <label>Payment Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>