force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Payments_Received_from_PNC__c.field-meta.xml
<CustomField>
    <fullName>Payments_Received_from_PNC__c</fullName>
    <label>Payments Received from PNC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>