force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Period_Date__c.field-meta.xml
<CustomField>
    <fullName>Period_Date__c</fullName>
    <label>Period Date</label>
    <type>DateTime</type>
</CustomField>