force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Pre_Bill_Days__c.field-meta.xml
<CustomField>
    <fullName>Pre_Bill_Days__c</fullName>
    <label>Pre Bill Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>