force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Rebooked__c.field-meta.xml
<CustomField>
    <fullName>Rebooked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebooked</label>
    <type>Checkbox</type>
</CustomField>