force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Record_Count__c.field-meta.xml
<CustomField>
    <fullName>Record_Count__c</fullName>
    <displayFormat>FRC-{0000}</displayFormat>
    <label>Record Count</label>
    <type>AutoNumber</type>
</CustomField>