force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Remaining_Months__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Months__c</fullName>
    <label>Remaining Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>