force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Remaining_Payments__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Payments__c</fullName>
    <label>Remaining Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>