force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Sales_Tax_Payable_CL__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax_Payable_CL__c</fullName>
    <label>Sales Tax Payable CL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>