force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Security_Deposit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Amount__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Security Deposit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>