force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Serv_Fees_Txns_Billed_Eligible_Passthru__c.field-meta.xml
<CustomField>
    <fullName>Serv_Fees_Txns_Billed_Eligible_Passthru__c</fullName>
    <label>Serv Fees Txns Billed Eligible Passthru</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>