force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Serv_Fees_Txns_Paid_Eligible_Passthrough__c.field-meta.xml
<CustomField>
    <fullName>Serv_Fees_Txns_Paid_Eligible_Passthrough__c</fullName>
    <label>Serv Fees Txns Paid Eligible Passthrough</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>