force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Starting_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Starting_Bill_Date__c</fullName>
    <label>Starting Bill Date</label>
    <type>Date</type>
</CustomField>