force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Subsidy__c</fullName>
    <label>Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>