force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Subvention__c.field-meta.xml
<CustomField>
    <fullName>Subvention__c</fullName>
    <description>Subention amount accrued</description>
    <label>Subvention</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>