force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Termination_Income_MTD__c.field-meta.xml
<CustomField>
    <fullName>Termination_Income_MTD__c</fullName>
    <label>Termination Income MTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>