force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Termination_Reason__c.field-meta.xml
<CustomField>
    <fullName>Termination_Reason__c</fullName>
    <label>Termination Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>