force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Times_Late_Charge_Assessed__c.field-meta.xml
<CustomField>
    <fullName>Times_Late_Charge_Assessed__c</fullName>
    <label>Times Late Charge Assessed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>