force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Total_Applied_to_Dues__c.field-meta.xml
<CustomField>
    <fullName>Total_Applied_to_Dues__c</fullName>
    <label>Total Applied to Dues</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>