force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Total_Finance_Fees_Tax_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Finance_Fees_Tax_Due__c</fullName>
    <label>Total Finance Fees + Tax Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>