force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Total_Receivable_Rent__c.field-meta.xml
<CustomField>
    <fullName>Total_Receivable_Rent__c</fullName>
    <label>Total Receivable Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>