force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Unbilled_Estimated_Property_Tax_Streams__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Estimated_Property_Tax_Streams__c</fullName>
    <label>Unbilled Estimated Property Tax Streams</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>