force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Unbilled_Receivable_Rent__c.field-meta.xml
<CustomField>
    <fullName>Unbilled_Receivable_Rent__c</fullName>
    <defaultValue>(0)</defaultValue>
    <label>Unbilled Receivable Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>