force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Number__c</fullName>
    <label>Vendor Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>