force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/X14800875_Termination_Clearing_Debit_Amt__c.field-meta.xml
<CustomField>
    <fullName>X14800875_Termination_Clearing_Debit_Amt__c</fullName>
    <label>14800875 Termination Clearing Debit Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>