force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/X14800875_Termination_Clearing_Net_Amt__c.field-meta.xml
<CustomField>
    <fullName>X14800875_Termination_Clearing_Net_Amt__c</fullName>
    <formula>X14800875_Termination_Clearing_Debit_Amt__c -  X14800875_Termination_Clearing_Credit_Am__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>14800875 Termination Clearing Net Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>