force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/X14800880_Asset_Clearing_Credit_Amt__c.field-meta.xml
<CustomField>
    <fullName>X14800880_Asset_Clearing_Credit_Amt__c</fullName>
    <label>14800880 Asset Clearing Credit Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>