force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/X14930744_Charge_Off_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>X14930744_Charge_Off_Net_Amount__c</fullName>
    <formula>X14930744_Charge_Off_Debit_Amount__c -  X14930744_Charge_Off_Credit_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>14930744 Charge Off Net Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>