force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/X18522740_Fee_Waiver_Clearing_Credit_Amt__c.field-meta.xml
<CustomField>
    <fullName>X18522740_Fee_Waiver_Clearing_Credit_Amt__c</fullName>
    <label>18522740 Fee Waiver Clearing Credit Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>