force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/X26206210_Accrued_Broker_Comm_Credit_Amt__c.field-meta.xml
<CustomField>
    <fullName>X26206210_Accrued_Broker_Comm_Credit_Amt__c</fullName>
    <label>26206210 Accrued Broker Comm Credit Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>