force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/X26206210_Accrued_Broker_Comm_Net_Amt__c.field-meta.xml
<CustomField>
    <fullName>X26206210_Accrued_Broker_Comm_Net_Amt__c</fullName>
    <formula>X26206210_Accrued_Broker_Comm_Debit_Amt__c -  X26206210_Accrued_Broker_Comm_Credit_Amt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>26206210 Accrued Broker Comm Net Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>