force-app/main/default/objects/CL_Lease_Financial_Report__c/fields/Years_in_Business__c.field-meta.xml
<CustomField>
    <fullName>Years_in_Business__c</fullName>
    <label>Years in Business</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>