force-app/main/default/objects/CL_Lease_Financial_Report__c/listViews/Test.listView-meta.xml
<ListView>
    <fullName>Test</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Contract_Status__c</columns>
    <columns>Unbilled_Receivable_Rent__c</columns>
    <columns>Billed_Unpaid_Receivable__c</columns>
    <columns>Ending_Unamortized_Fee_1_4_Amount__c</columns>
    <columns>Amortized_Fee_1_4_LTD__c</columns>
    <columns>Ending_Unamortized_Fee_3_Amount__c</columns>
    <columns>Ending_Unearned_Lease_Income__c</columns>
    <columns>Ending_Residual_Balance__c</columns>
    <columns>Ending_Unearned_Residual_Income__c</columns>
    <columns>Other_Equipment_Owned__c</columns>
    <columns>Ending_Unamortized_Fee_2_Amount__c</columns>
    <columns>Ending_Unamortized_Fee_5_Amount__c</columns>
    <columns>Open_Fee_Receivable__c</columns>
    <columns>Security_Deposit_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>LES-0000000509,LES-0000000530,LES-0000000531,LES-0000000532,LES-0000000533</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>LES-0000000577,LES-0000000410</value>
    </filters>
    <label>Test</label>
    <language>en_US</language>
</ListView>